syntax = "proto3";
package pb;
option go_package = "internal/pb";

service UserService {
    rpc CreateUser (CreateUserRequest) returns (UserResponse);
    rpc GetUser (GetUserRequest) returns (UserResponse);
    rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
    rpc DeleteUser (DeleteUserRequest) returns (Empty);
    rpc transferFunds (transferFundsUserRequset) returns (UserResponse);
}

message CreateUserRequest{
    string name = 1;
    string email = 2;
    int64 balance = 3;
}

message GetUserRequest{
    int64 id = 1;
}

message UpdateUserRequest{
    int64 id = 1;
    string name = 2;
    string email = 3;
    int64 balance = 4;
}

message DeleteUserRequest{
    int64 id = 1;
}

message transferFundsUserRequset{
    int64 fromid = 1;
    int64 toid = 2;
    int64 balance = 3;
}

message Empty{}

message UserResponse{
    int64 id = 1;
    string name = 2;
    string email = 3;
    int64 balance = 4;
}